# fastapi-typescript-sandbox

./: .gitignore
backend/: debug.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/models/: groups.py  user.py
backend/app/models/views/: user.py
backend/app/routers/: groups.py  users.py
backend/config/: base.py
frontend/: package-lock.json  package.json
