[project]
name = "app"
dynamic = ["version", "description"]
authors = [{ name = "Arthur Harduim", email = "harduim.arthur@gmail.com" }]
dependencies = [
    "setuptools>=56.0.0",
    "sqlmodel~=0.0.8",
    "SQLAlchemy>=1.4.34,<=1.4.39",
    "uvicorn[standard]>=0.12.0,<0.19.0",
    "gunicorn==20.1.0",
    "fastapi~=0.87",
    "pydantic~=1.10.2",
    "python-multipart~=0.0.5",
    "orjson >=3.2.1,<4.0.0",
]

[project.optional-dependencies]
dev = ["black", "isort"]
unittest = ["httpx", "pytest-forked", "pytest", "pytest-xdist"]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
addopts = '-n auto --forked'

[tool.flake8]
max-line-length = 100
max-complexity = 18

[tool.coverage.run]
omit = ["tests/*", "app/models/*"]

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
